Adding post translation API req
